# xlsx-json-seed

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: update-readme.yaml
example/: .~input.xlsx  config.yaml  input.xlsx  result.csv  result.json  result.xlsx  script.yaml
scripts/: update_readme.py
src/: config.cpp  config.hpp  csv.hpp  json.hpp  main.cpp  nitro_sheet.hpp  openxlsx_adapter.hpp  operations.cpp  operations.hpp  progress.hpp  utils.cpp  utils.hpp
src/utils/: dynamic_placeholder.cpp  dynamic_placeholder.hpp  utils.cpp  utils.hpp
tests/: test_operations.cpp  test_utils.cpp
